--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,7 @@
     "name": "select2",
     "description": "Select2 is a jQuery based replacement for select boxes. It supports searching, remote data sets, and infinite scrolling of results.",
     "main": [
-        "dist/js/select2.js",
-        "dist/css/select2.css"
+        "dist/js/select2.js"
     ],
     "repository": {
         "type": "git",
