--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git@github.com:select2/select2.git"
+        "url": "git@github.com:gion/select2.git"
     }
 }
